// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`runCli > outputs the results and returns 1 when a --filename package.json is not valid 1`] = `
[
  [
    "other.json is NOT valid",
  ],
  [
    {
      "errors": [
        {
          "field": "name",
          "message": "Missing required field: name",
        },
        {
          "field": "version",
          "message": "the type should be a \`string\`, not \`number\`",
        },
      ],
      "valid": false,
    },
  ],
]
`;

exports[`runCli > outputs the results and returns 1 when the default package.json is not valid 1`] = `
[
  [
    "package.json is NOT valid",
  ],
  [
    {
      "errors": [
        {
          "field": "name",
          "message": "Missing required field: name",
        },
        {
          "field": "version",
          "message": "the type should be a \`string\`, not \`number\`",
        },
      ],
      "valid": false,
    },
  ],
]
`;

exports[`runCli > returns 0 and logs results when the file is valid and --quiet is not provided 1`] = `
[
  [
    {
      "valid": true,
    },
  ],
]
`;
